docss: README.md